# liscpp

./: .gitignore  CMakeLists.txt  IDEAS.md  README.md  bb.edn  shell.nix
include/: closure.h  core.h  error.h  fn.h  generator.h  list.h  mod_io.h  rep.h  stream.h  type.h  util.h  value.h  value_functions.h
src/: core.cpp  error.cpp  fn.cpp  generator.cpp  list.cpp  mod_io.cpp  stream.cpp  type.cpp  util.cpp  value.cpp  value_functions.cpp
test/: test_compiled_forms.cpp  test_core.cpp  test_liscpp.cpp  test_mod_io.cpp  test_type.cpp  test_value.cpp  test_value_functions.cpp
